Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41285

QWebSocket handles URLs with encoded characters incorrectly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.3.1, 5.4.0 Alpha
    • WebSockets
    • None

      QWebSocket constructs an incorrect HTTP request when the query part of
      the URL contains characters that should be percent encoded. The characters that should be percent encoded appear decoded on the first line of the HTTP request.

        For Gerrit Dashboard: QTBUG-41285
        # Subject Branch Project Status CR V

            juturune Juha Turunen
            juturune Juha Turunen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes