Fix QWebSocket's handling of query parameters with encoded characters

QWebSocket used decoded version of the query part of the URL to
construct the first line of the HTTP request.

Task-number: QTBUG-41285
Change-Id: If16210f1b92e389dae8b1057a2d911122c31e2db
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>